Improve word list placeholder text

--- a/flashcard_game_auto_level_smart_mc_v_5.html
+++ b/flashcard_game_auto_level_smart_mc_v_5.html
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col">
         <label>Word list
-          <textarea id="raw" placeholder="**משני** – secondary\n**לפרסם פוסט** – to publish a post\nשלום - hello"></textarea>
+          <textarea id="raw" placeholder="Paste pairs like **שלום – hello** or **ללמוד – to study**, one per line."></textarea>
         </label>
       </div>
       <div class="col" style="align-self:flex-start;display:flex;flex-direction:column;gap:10px">
